0.2.2cvs
========

- Check version on startup
- Show version in mainwidow
- Add log window on the left
- Reduce dependencies in MainWindow.h
- Store list of servers in connect dialog
- Added persistant database
- Added CHANGES file